- Fixes the header on mobile devices. - Makes statuses full width (width the original padding as before). - Updated downloads page.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@783 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.css
+++ b/trunk/website/inc/css/style.css
@@ -465,6 +465,23 @@ footer {
 		margin:0px;
 	}
 	
+	.no-mobile {
+		display: none;
+	}
+	
+}
+
+.download-button {
+	display: block;
+	width: auto;
+	padding: 19px 24px;
+	margin-bottom: 27px;
+	font-size: 30px;
+	line-height: 1;
+	text-align: center;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
 }
 
 /* buttons (minfied) */
